--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "swagger-typescript-api": "swagger-typescript-api -p https://satto.henesisback.shop/v2/api-docs -r -o ./src/models --modular -d --extract-request-body --extract-response-body --extract-response-error"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -36,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "swagger-typescript-api": "^13.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
